[#4] z-index fix for snackbar

--- a/client-src/view/theme.css
+++ b/client-src/view/theme.css
@@ -1,5 +1,6 @@
 .view {
   position: relative;
+  z-index: 0;
   background: var(--md-white);
   width: 100vw;
   height: 100vh;
@@ -34,4 +35,9 @@
     height: 100%;
     min-width: 0;
   }
+}
+
+.aboveView {
+  position: relative;
+  z-index: 1;
 }
